Fixed the scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,3 +67,21 @@ p{
     margin-bottom: 12px; 
     font-family: "Aeonik", sans-serif;
 }
+
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background: #555;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #121212;
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #242424;
+}
